# Artha

./: .gitignore  README.md
.github/workflows/: docker-image.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  aerich.ini  pyproject.toml  railway.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  main.py  telemetry.py
backend/app/models/: business.py  cashbook.py  item.py  party.py  transaction.py  user.py
backend/app/routers/: auth.py  business.py  cashbook.py  invoices.py  items.py  parties.py  reports.py  transactions.py
backend/app/schemas/: auth.py  business.py  cashbook.py  item.py  party.py  reports.py  transaction.py
backend/app/services/: gst.py  pdf_service.py
frontend/: .env.example  Readme.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  business.ts  cashbook.ts  client.ts  items.ts  parties.ts  reports.ts  transactions.ts
frontend/src/components/: InvoiceModal.tsx  SubscriptionModal.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: Cashbook.tsx  Dashboard.tsx  Items.tsx  Parties.tsx  PartyDetail.tsx  Purchases.tsx  Reports.tsx  Sales.tsx  Settings.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/stores/: authStore.ts  themeStore.ts
frontend/src/types/: index.ts
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/src/api/: auth.ts  client.ts  config.ts  resources.ts  types.ts
mobile/src/context/: AuthContext.tsx
mobile/src/data/: dummyData.ts
mobile/src/navigation/: AppTabs.tsx  AuthStack.tsx  MoreStack.tsx  RootNavigator.tsx  TabStacks.tsx  types.ts
mobile/src/screens/auth/: LoginScreen.tsx  SignupScreen.tsx
mobile/src/screens/cashbook/: CashbookScreen.tsx
mobile/src/screens/dashboard/: DashboardScreen.tsx
mobile/src/screens/items/: AddItemScreen.tsx  ItemsListScreen.tsx
mobile/src/screens/more/: MoreHomeScreen.tsx
mobile/src/screens/parties/: AddPartyScreen.tsx  PartiesListScreen.tsx
mobile/src/screens/purchases/: AddPurchaseScreen.tsx  PurchasesListScreen.tsx
mobile/src/screens/reports/: ReportsScreen.tsx
mobile/src/screens/sales/: AddSaleScreen.tsx  SalesListScreen.tsx
mobile/src/screens/settings/: SettingsScreen.tsx
mobile/src/theme/: index.ts
