[project]
name = "artha-backend"
version = "0.1.0"
description = "Smart GST accounting backend for businesses"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "tortoise-orm[asyncpg]==0.21.7",
    "aerich==0.7.2",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-multipart==0.0.18",
    "aiofiles==24.1.0",
    "python-dotenv==1.0.1",
    "email-validator==2.2.0",
    "jinja2==3.1.4",
]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = []
