[project]
name = "artha-backend"
version = "0.1.0"
description = "Smart GST accounting backend for businesses"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "tortoise-orm[asyncpg]==0.21.7",
    "aerich==0.7.2",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-multipart==0.0.18",
    "aiofiles==24.1.0",
    "python-dotenv==1.0.1",
    "email-validator==2.2.0",
    "jinja2==3.1.4",
    # OpenTelemetry — tracing and correlated logging
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp-proto-http==1.42.1",
    "opentelemetry-instrumentation-fastapi==0.63b1",
    "opentelemetry-instrumentation-logging==0.63b1",
]

[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "bandit[toml]>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (basic security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # allow assert (used in tests/guards)
    "B008",  # allow function calls in default args (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["ALL"]  # skip generated migration files
"app/services/pdf_service.py" = ["E501"]  # HTML/CSS template strings have unavoidable long lines

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["migrations", "tests"]
skips = ["B101"]  # skip assert warnings (same as ruff S101)
